Fix app to check

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,10 @@ install:
 
 # command to run tests and quality checks
 script:
-    #- coverage run --source=search ./manage.py test
+    #- coverage run --source=oai ./manage.py test
     - coverage report -m
-    - pep8 --config=.pep8 search
-    - pylint --rcfile=.pylintrc search --report=no
+    - pep8 --config=.pep8 oai
+    - pylint --rcfile=.pylintrc oai --report=no
 
 branches:
     only:
