--- a/.pylintrc
+++ b/.pylintrc
@@ -1,3 +1,5 @@
+[MASTER]
+ignore=migrations
 [MESSAGES CONTROL]
 disable=too-many-lines
 # https://bitbucket.org/logilab/pylint/issue/214/the-duplicate-code-r0801-cant-be-disabled
