--- a/circle.yml
+++ b/circle.yml
@@ -11,24 +11,10 @@ dependencies:
     - sudo apt-get install -y swig libxml2-dev libxslt1-dev libxmlsec1-dev
     - sudo apt-get install -y libfreetype6-dev python-pip python-apt python-dev
   override:
-
-    - pip install coveralls
-    - pip install pep8
-    - pip install pylint
-    - pip install -r requirements.txt
-    - pip install -r test-requirements.txt
+    - ./pip_install_local.sh
     - ./copy_edx_dependencies.sh:
         timeout: 1200
 
 test:
   override:
-    - coverage run --source=oai,ecoapi,xapi ./manage.py test xapi
-    - coverage run --source=oai,ecoapi,xapi ./manage.py test ecoapi
-    - coverage run --source=oai,ecoapi,xapi ./manage.py test oai
-    - coverage report -m
-    - pep8 --config=.pep8 oai
-    - pylint --rcfile=.pylintrc oai --report=no
-    - pep8 --config=.pep8 ecoapi
-    - pylint --rcfile=.pylintrc ecoapi --report=no
-    - pep8 --config=.pep8 xapi
-    - pylint --rcfile=.pylintrc xapi --report=no
+    - ./run_tests.sh
