--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@
 celery==3.1.18
 Django >= 1.4, < 1.5
 django-celery==3.1.16
-
+pytz==2015.4
+aniso8601
 -e git+https://github.com/infrae/pyoai.git@2.4.4#egg=pyoai==2.4.4
+-e git+https://github.com/RusticiSoftware/TinCanPython.git#egg=tincan
 
 #amqp==1.4.6
 #anyjson==0.3.3
@@ -11,5 +13,4 @@ django-celery==3.1.16
 #billiard==3.3.0.20
 #kombu==3.0.26
 #lxml==3.4.4
-#pytz==2015.4
 #wsgiref==0.1.2
