--- a/docker/base/Dockerfile
+++ b/docker/base/Dockerfile
@@ -29,7 +29,9 @@ RUN apt-get install -y \
   gfortran \
   libopenblas-dev \
   liblapack-dev \
-  libgeos-dev
+  libgeos-dev \
+  libffi6 \
+  libffi-dev
 
 RUN apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
